added config server and user already exists exception